src/html/gsa-style.css
/* ... */
.progressbar_bar {
 height:12px;
 background:#70C000 url('img/p_bar.png');
}

.progressbar_bar_done {
 height: 12px;
 background:#CCCCCC url('img/p_bar_done.png');
}

.progressbar_bar_new {
 height: 12px;
 background: #df8e31 url('img/p_bar_new.png');
}

.progressbar_bar_error {
 height: 12px;
 background: #bd3309 url('img/p_bar_error.png');
}

.progressbar_bar_request {
 height: 12px;
 background: #bd8634 url('img/p_bar_request.png');
}

.progressbar_text {
 z-index:3;
 position:relative;
 top:-12px;
 font-weight:bold;
 color:#FFFFFF;
 font-size:9px;
}

/* END Greenbone Progress Bar */

/* BEGIN Greenbone Tables */

table.gbntable {
    text-align:left;
    width: 100%;
    margin-bottom: 20px;
}

.gbntable th {
 background-color: #70C000;
}

.gbntable td {
 -ms-word-break: break-all;
 word-break: break-all;
}

/* green row */
.gbntablehead1 td{
 text-align: left;
 background-color: #70C000;
 color: #FFFFFF;
 font-weight: bold;
}

/* dark grey row */
.gbntablehead2 td {
 text-align:left;
 background-color: #3A3A3A;
 color: #FFFFFF;
 font-weight: bold;

 -ms-word-break: normal;
 word-break: normal;
}

.gbntablehead2 a {
 color: #FFFFFF;
 font-weight: bold;
 text-decoration: none;
}

.gbntablehead2 a:hover {
 color: #FFFFFF;
 font-weight: bold;
 text-decoration: underline;
}

.gbntablehead2 a:focus {
 color: #FFFFFF;
 font-weight: bold;
 text-decoration: underline;
}

tr.odd {
 text-align:left;
 background-color: #EEEEEE;
}

tr.odd:hover {
 background: #DDDDDD;
}

tr.even:hover {
 background: #DDDDDD;
}

tbody.odd {
 text-align:left;
 background-color: #EEEEEE;
}

tbody.odd:hover {
 background: #DDDDDD;
}

tbody.even:hover {
 background: #DDDDDD;
}

table.odd {
 background-color: #EEEEEE;
}

td p {
 margin-top: 0;
}

/* END Greenbone Tables */

/* BEGIN Window decorations */

.gb_window {
}

.gb_window_part_left {
 background: url('img/style/window_dec_a.png') no-repeat;
 width:6px;
 height:32px;
 float:left;
 margin:0px;
}

.gb_window_part_center {
 background: url('img/style/window_dec_b.png') repeat-x;
 height: 32px;
 background-color: #70C000;
 color: #FFFFFF;
 font-weight: bold;
 padding-top:5px;
 text-align:left;
 margin:0px;
 font-size:13px;
}

.gb_window_part_right {
 background: url('img/style/window_dec_c.png') no-repeat;
 width: 76px;
 height: 32px;
 float: right;
 margin:0px;
}

.gb_window_part_content {
 background: #f9f9f9;
 border: 1px solid #7c7c7c;
 border-top: none;
 padding: 5px;
 text-align: left;
 position:relative;
 top:-5px;
 font-size:12px;
}

.gb_window_part_content_no_pad {
 background: #f9f9f9;
 border: 1px solid #7c7c7c;
 border-top: none;
 position:relative;
 top:-5px;
}

.gb_window_error {
}

.gb_window_part_left_error {
 background: url('img/style/window_dec_a_error.png') no-repeat;
 width:6px;
 height:32px;
 float:left;
 margin:0px;
}

.gb_window_part_center_error {
 background: url('img/style/window_dec_b_error.png') repeat-x;
 background-color: #CC0000;
 height: 32px;
 color: #FFFFFF;
 font-weight: bold;
 padding-top:5px;
 text-align:left;
 margin:0px;
 font-size:13px;
}

.gb_window_part_right_error {
 background: url('img/style/window_dec_c_error.png') no-repeat;
 width: 76px;
 height: 32px;
 float: right;
 margin:0px;
}

.gb_window_part_content_error {
 background: #fffac7;
 border: 1px solid #7c7c7c;
 border-top: none;
 padding: 5px;
 text-align: left;
 position:relative;
 top:-5px;
 font-size:12px;
}

/* END Window decorations */

/* Menu Bar */
#gb_menu {

}

#gb_menu ul {
 list-style: none;
 margin: 0px;
 padding: 0px;
}

#gb_menu ul li {
 float:left;
}

#gb_menu ul li a {
 display: block;
 width: 128px;
 height: 35px;
 background: url('img/style/top_menu_buttons.png');
 background-position: -130px 0px;
 line-height: 35px;
 font-size: 10px;
 color: #FFFFFF;
 text-decoration: none;
 font-weight: bold;
}

#gb_menu ul .first_button > a {
 width: 130px;
 background-position: 0px 0px;
}

#gb_menu ul .first_button:hover a {
 background-position: 0px -35px;
}

#gb_menu ul .last_button > a {
 width: 130px;
 background-position: -258px 0px;
}

#gb_menu ul .last_button:hover a {
 background-position: -258px -35px;
}

#gb_menu ul li:hover a {
 background-position: -130px -35px;
}

#gb_menu ul.first_button_overlay,
#gb_menu li.first_button_overlay,
#gb_menu ul.first_button_overlay li.first_button_overlay,
#gb_menu ul.first_button_overlay li.first_button_overlay a.first_button_overlay,
#gb_menu ul.first_button_overlay li.first_button_overlay ul.first_button_overlay {
 width: 255px;
 z-index: 7;
 list-style: none;
 position: absolute;
 margin-top: 1px;
 background: none;
 display: block;
 border: 0px;
}

#gb_menu li.overlay_last {
 -webkit-border-radius: 0px 0px 8px 8px;
 -moz-border-radius: 0px 0px 8px 8px;
 border-radius: 0px 0px 8px 8px;
}

#gb_menu ul.first_button_overlay li.first_button_overlay {
 background: #99CE48;
}

#gb_menu ul li ul {
 width: 255px;
 z-index: 6;
 list-style: none;
 position: absolute;
 margin-top: -1px;
 display:none;
 background: #FAFAFA;
 border: 1px solid #3A3A3A;
 -webkit-border-radius: 0px 0px 8px 8px;
 -moz-border-radius: 0px 0px 8px 8px;
 border-radius: 0px 0px 8px 8px;
}

#gb_menu li.section_start {
 border-top: 1px solid #b0b0b0;
}

#gb_menu ul li ul a {
 background: none;
 line-height: 22px;
 text-align: left;
 text-indent: 12px;
 color: #3A3A3A;
 width: 255px;
 height: 22px;
}

#gb_menu ul li ul .indent a {
 background: none;
 line-height: 22px;
 text-align: left;
 text-indent: 25px;
 color: #3A3A3A;
 width: 255px;
 height: 22px;
}

a.top_button {
 position: relative;
}

div.first_button_overlay {
 border: 0px;
 width: 255px;
 height: 22px;
 position: absolute;
 top: 34px;
 left: 1px;
 z-index: 10;
 line-height: 35px;
 font-size: 10px;
 text-align:left;
 color: #FFFFFF;
 text-decoration: none;
 font-weight: bold;
 background: none;
 display: none;
}

li.first_button_overlay {
 background: none;
 line-height: 22px;
 text-align: left;
 text-indent: 12px;
 color: #3A3A3A;
 width: 255px;
 height: 22px;
 border: 0px;
}
/* ... */

