For Targets, Tasks, Report Results and Report SSL Certs make the first 	column a fixed width and truncate the contents with ellipsis if it 	reaches the width.
	* src/html/omp.xsl (list-window): Specify width if column is Name or DN.
	(task, target): Make the Name TDs a gbntable_name, and wrap the contents
	in a DIV.
	(result [result-headers]): Specify width of Vulnerability header TD.
	Make TD gbntable_name and add DIV.
	(report [ssl_certs]): Make TD gbntable_name and add DIV with tooltip.

	* src/html/gsa-style.css (.gbntable td): Remove word breaking.  Add
	ellipsis truncation.
	(.gbntable div): New rule.
	(.gbntablehead2 td): Remove word breaking.

git-svn-id: svn+ssh://scm.wald.intevation.org/openvas/trunk/gsa@18199 423fd1db-d629-0410-8442-d21db03e70f4

--- a/src/html/gsa-style.css
+++ b/src/html/gsa-style.css
@@ -298,9 +298,18 @@ table.gbntable {
  background-color: #70C000;
 }
 
-.gbntable td {
- -ms-word-break: break-all;
- word-break: break-all;
+.gbntable_name td {
+ width: 200px;
+ overflow: hidden;
+ white-space: nowrap;
+ text-overflow: ellipsis;
+}
+
+.gbntable_name div {
+ max-width: 200px;
+ overflow: hidden;
+ white-space: nowrap;
+ text-overflow: ellipsis;
 }
 
 /* green row */
@@ -317,9 +326,6 @@ table.gbntable {
  background-color: #3A3A3A;
  color: #FFFFFF;
  font-weight: bold;
-
- -ms-word-break: normal;
- word-break: normal;
 }
 
 .gbntablehead2 a {
